Add auto translation and code optimizations (#13)